# CharterCore

./: CONTRIBUTING_RULES.md  INVARIANTS.md  INVARIANTS_GOAL.md  INVARIANTS_TO_TESTS.md  LICENSE  MVP_DEVIATIONS.md  PRODUCT_BRIEF.md  README.md  SIMULATIONS.md  SIMULATIONS_GOAL.md  SIMULATIONS_MVP.md
charter/: .gitignore  Cargo.toml
charter-substrate/: Cargo.toml
charter/crates/charter-core/: Cargo.toml
charter/crates/charter-core/src/: engine.rs  errors.rs  ids.rs  lib.rs  time.rs  types.rs
charter/crates/charter-core/src/engine/: area.rs  mod.rs
charter/crates/charter-core/src/model/: area.rs  authority_rule.rs  candidate.rs  ids.rs  mod.rs  resolution.rs  resolution_state.rs  session.rs  session_state.rs  vote.rs  vote_type.rs
charter/crates/charter-core/src/spec/: eng_hash.rs  mod.rs
charter/crates/charter-core/src/storage/: area.rs  audit_store.rs  core.rs  envelope.rs  hashing.rs  metadata_store.rs  mod.rs  object_store.rs  ref_store.rs
charter/crates/charter-core/src/storage/memory/: mod.rs  object_store.rs
charter/crates/charter-core/src/storage/onefile/: object_store.rs
docs/: FAQ.md  INVARIANTS.md  INVARIANTS_TO_TESTS.md  MENTAL_MODEL.md  PRODUCT_BRIEF_CLI.md  PRODUCT_BRIEF_CORE.md  SIMULATIONS.md
docs/canon/: legitimacy-ledger.md
docs/cli/: canonical-naming-specifications.md  cli-simulations.md
docs/core/: FAQ.md  INVARIANTS.md  INVARIANTS_TO_TESTS.md  SIMULATIONS.md
docs/design/: annotations.md  area-authorities.md  charter-self-governing.md  cli-commands-evaluation.md  cli-commands.md  cli-invariants-final.md  cli-invariants-v2.md  (+25 more)
(+360 files in other folders)
