[package]
name = "charter-core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
derive_more = { version = "2.1.1", features = ["from", "display", "from_str"] }
enum_dispatch = "0.3.13"
fmt = "0.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_json_canonicalizer = "0.3.1"
sha2 = "0.10.9"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
uuid = { version = "1.19.0", features = ["v7", "serde"] }
